Fixed display of filter on mobile.

--- a/src/app/assets/scss/partials/_shop.scss
+++ b/src/app/assets/scss/partials/_shop.scss
@@ -25,6 +25,10 @@
 			margin-top: 30px;
 		}
 
+		.form-control-default {
+			background: #ffffff;
+		}
+
 		.filter_option {
 			display: inline-block;
 			margin-right: 2px;
